--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,9 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
-    <script type="module" src="./main.js"></script>
+      <ul>
+      <li><a href="1-gallery.html"><img  alt="1-gallery" src="./img/gallery-svgrepo-com.svg" height="100" width="100" ></a></a></li>
+      <li><a href="task-02.html">Task 2</a></li>
+    </ul>
   </body>
 </html>
