--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
   <body>
       <ul>
       <li><a href="1-gallery.html"><img  alt="1-gallery" src="./img/gallery-svgrepo-com.svg" height="100" width="100" ></a></a></li>
-      <li><a href="task-02.html">Task 2</a></li>
+      <li><a href="2-form.html">Task 2</a></li>
     </ul>
   </body>
+  
 </html>
