--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -12,6 +12,7 @@
         />
     </head>
     <body>
+        <a href="index.html" class="return-booton">Retorn</a>
         <ul class="gallery"></ul>
 
         <script src="./js/1-gallery.js" type="module"></script>
