--- a/src/2-form.html
+++ b/src/2-form.html
@@ -4,21 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>2-form</title>
   </head>
   <body>
-<form class="feedback-form" autocomplete="off">
-  <label>
-    Email
-    <input type="email" name="email" autofocus />
-  </label>
-  <label>
-    Message
-    <textarea name="message" rows="8"></textarea>
-  </label>
-  <button type="submit">Submit</button>
-</form>
-<script src="./js/2-form.js" type="module"></script>
+    <a href="index.html" class="return-booton">Retorn</a>
+      <form class="feedback-form" autocomplete="off">
+
+          <label class="form-label">
+            Email
+            <input type="email" name="email" autofocus class="activ-stail"/>
+          </label >
+
+
+          <label class="form-label">
+            Message
+            <textarea name="message" class="activ-stail" rows="4" resi ></textarea>
+          </label>
+
+
+          <button type="submit" class="positiv-button">Submit</button>
+
+      </form>
+
+    <script src="./js/2-form.js" type="module"></script>
   </body>
-  
 </html>
