--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
       <ul>
-      <li><a href="1-gallery.html"><img  alt="1-gallery" src="./img/gallery-svgrepo-com.svg" height="100" width="100" ></a></a></li>
-      <li><a href="2-form.html">Task 2</a></li>
+      <li><a href="1-gallery.html"><img  alt="1-gallery" src="./img/gallery-svgrepo-com.svg" height="200" width="200" class="tasc-clik"></a></a></li>
+      <li><a href="2-form.html"><img  alt="1-gallery" src="./img/iconmonstr-document-thin.svg" height="200" width="200" class="tasc-clik"></a></li>
     </ul>
   </body>
   
