--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
       <ul>
-      <li><a href="/src/partials/1-gallery.html"><img  alt="1-gallery" src=".//img/gallery-svgrepo-com.svg" height="200" width="200" class="tasc-clik"></a></a></li>
+      <li><a href=".//src/partials/1-gallery.html"><img  alt="1-gallery" src=".//img/gallery-svgrepo-com.svg" height="200" width="200" class="tasc-clik"></a></a></li>
       <li><a href=".//partials/2-form.html"><img  alt="1-gallery" src="./img/iconmonstr-document-thin.svg" height="200" width="200" class="tasc-clik"></a></li>
     </ul>
   </body>
