--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-      <ul>
-      <li><a href="/partials/1-gallery.html"><img  alt="1-gallery" src=".//img/gallery-svgrepo-com.svg" height="200" width="200" class="tasc-clik"></a></a></li>
-      <li><a href="src/partials/1-gallery.html"><img  alt="1-gallery" src="./img/iconmonstr-document-thin.svg" height="200" width="200" class="tasc-clik"></a></li>
-    </ul>
+    <load ="partials/header.html" />
   </body>
   
 </html>
