--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -9,7 +9,7 @@
 
   </head>
   <body>
-    <a href="../index.html" class="return-booton">Retorn</a>
+    <a href="./index.html" class="return-booton">Retorn</a>
     <ul class="gallery"></ul>
 
     <script src="/js/1-gallery.js" type="module"></script>
