--- a/src/2-form.html
+++ b/src/2-form.html
@@ -8,7 +8,7 @@
     <title>2-form</title>
   </head>
   <body>
-    <a href="..//index.html" class="return-booton">Retorn</a>
+    <a href="./index.html" class="return-booton">Retorn</a>
       <form class="feedback-form" autocomplete="off">
 
           <label class="form-label">
