--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -12,7 +12,7 @@
     <a href="./index.html" class="return-booton">Retorn</a>
     <ul class="gallery"></ul>
 
-    <script src="/js/1-gallery.js" type="module"></script>
+    <script src="./js/1-gallery.js" type="module"></script>
   </body>
 </html>
 
